[package]
name = "dewedat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
colour = "0.6.0"
tokio = { version = "1", features = ["full"] }
rayon = "1.5.1"
futures = "0.3"

[profile.release]
strip = "symbols"
