[package]
name = "dewedat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
colour = "0.6.0"
rayon = "1.5.1"
async-fs = "1.5.0"
async-io = "1.6.0"
futures = { version = "0.3", default-features = false, features = ["std"] }

[profile.release]
strip = "symbols"
